TestCases/Errors/threaded_movement/observations/aut_09_obs.spm
 obs   15-5   0.00037593984962406 
 obs   16-5   0.000107228107750506 
 obs   17-5   0.000135015424541397 
 obs   15-6   0.000240271964983023 
 obs   16-6   0.000235671114609978 
 obs   17-6   6.94818964347354e-05 
 obs   15-7   0.000527275953245084 
 obs   16-7   0.000232485165203056 
 obs   5-12   0.00475139146567718 
 obs   9-18   0.007 
 obs   8-19   0.0186666666666667 
 obs   9-19   0.014625 
 obs   5-20   0.003 
 obs   9-20   0.00971428571428571 
 obs   10-20   0.0102142857142857 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   17-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   5-12   0 
 error_value   9-18   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   5-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
